<resources>
    <string name="app_name">TareaLaboDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registro_de_notas">Registro de notas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carnet">Carnet:</string>
    <string name="nombre">Nombre:</string>
    <string name="limpiar">limpiar</string>
    <string name="nota">Nota:</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
</resources>
