<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:gravity="center"
    tools:context="com.jorge.Fragmentos.AddAlumnoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"

        android:layout_marginTop="8dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/txtCarnet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carnet"
        android:textColor="#000"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editCarnet"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:digits="1234567890"
        android:hint="00074216"
        android:textAlignment="center"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="#000"
        android:layout_marginTop="8dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:hint="Jorge Alberto Franco Cuadra" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</RelativeLayout>
